--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Default Starter</title>
+    <title>Moubarack Bagoudou</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Karla&family=Spectral&display=swap");
     </style>
@@ -19,29 +19,5 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
-    <nav class="navbar">
-      <div class="section-center">
-        <div class="nav-header">
-          <h3>Moubarack <span>Bagoudou</span></h3>
-          <button
-            id="toggle-btn"
-            type="button"
-            class="nav-btn"
-            onclick="showNavbar()"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-        </div>
-        <ul class="nav-links" id="hide-links">
-          <a class="nav-link" href="about.html"><li>About</li></a>
-          <a class="nav-link" href="experience.html"><li>Experience</li></a>
-          <a class="nav-link" href="projects.html"><li>Projects</li></a>
-          <a class="nav-link" href="contact.html"><li>Contact</li></a>
-        </ul>
-      </div>
-    </nav>
-
-    <script src="app.js"></script>
-  </body>
+  <body></body>
 </html>
